[metadata]
name = tchat
version = attr: tchat.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Cl chat.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/tchat
license = apache2
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tchat=tchat.app:app
